--- a/config/route/main.yaml
+++ b/config/route/main.yaml
@@ -1,7 +1,8 @@
 #Descripcion : Busca el rol por el id
 #Parametro   : id (Int)
 #Salida      : Rol buscado por el id.
-service_getallroles:
+#Example     : http://127.0.0.1/services/?BC=globalmx_roles&id=1
+globalmx_roles:
     method: get
     app: controller
     module: ControllerRol
@@ -9,7 +10,8 @@ service_getallroles:
 #Descripcion : Busca todos los paises 
 #Parametro   : No
 #Salida      : Todos los paises en la base de datos.
-service_getallpais:
+#Example     : http://192.185.36.179/services/?BC=globalmx_pais
+globalmx_pais:
 	method: get
 	app: controller
 	module: ControllerPais
@@ -17,7 +19,8 @@ service_getallpais:
 #Descripcion : Busca la region
 #Parametro   : idPais (Int)
 #Salida      : Todos las regiones del id del pais
-service_getregionbypais:
+#Example     : http://127.0.0.1/services/?BC=globalmx_regionbypais&idPais=53
+globalmx_regionbypais:
 	method: get
 	app: controller
 	module: ControllerRegion
@@ -25,7 +28,8 @@ service_getregionbypais:
 #Descripcion : Obtiene la ciudad dentro de una region
 #Parametro   : idRegion (Int)
 #Salida      : Lista de ciudades dentro de una region
-service_getciudadbyregion:
+#Example     : http://127.0.0.1/services/?BC=globalmx_ciudadbyregion&idRegion=3680
+globalmx_ciudadbyregion:
 	method: get
 	app: controller
 	module: ControllerCiudad
@@ -35,8 +39,9 @@ service_getciudadbyregion:
 #Parametro   : numTarjeta
 #			   numPin
 #Salida      : Da Acceso al modulo de Activación de tarjeta.
-service_activetarjetastepone:
-	method: get
+#Example     : http://127.0.0.1/services/?BC=globalmx_activetarjetastep1&numTarjeta=1886934616765905&numPin=5476
+globalmx_activetarjetastep1:
+	method: post
 	app: controller
 	module: ControllerTarjeta
 	action: activeTarjetaStep1
@@ -55,9 +60,9 @@ service_activetarjetastepone:
 #			   fecha_nacimiento
 #			   pin
 #Salida      : Respuesta de Exito, Tarjeta activada.
-#Example     :http://127.0.0.1/GlobalMaxService/?route=service_activetarjetasteptwo&cedula=3242&tarjeta=1886934616766151&ciudad=10&nombre=asdas&apellido=asd&direccion=asdsaasdas&barrio=asdsa&telefono=23223&celular=342343&email=asdas&fecha_nacimiento=2015/03/03&pin=6733
-service_activetarjetasteptwo:
-	method: get
+#Example     :http://127.0.0.1/services/?BC=globalmx_activetarjetastep2&cedula=3242&tarjeta=1886934616766151&ciudad=10&nombre=asdas&apellido=asd&direccion=asdsaasdas&barrio=asdsa&telefono=23223&celular=342343&email=asdas&fecha_nacimiento=2015/03/03&pin=6733
+globalmx_activetarjetastep2:
+	method: post
 	app: controller
 	module: ControllerPersona
 	action: createPersona
@@ -66,7 +71,7 @@ service_activetarjetasteptwo:
 #Parametro   : user (String)
 #			   password (String)
 #Salida      : Da Acceso a la aplicación de administración global max
-service_validateuser:
+globalmx_v4lidateuser:
 	method: get
 	app: controller
 	module: ControllerUsuario
@@ -77,15 +82,60 @@ service_validateuser:
 #              user   String
 #              contrasena String
 #Salida      : Retorna mensaje de Exito o Error segun caso cumplido.
-#Example     : http://127.0.0.1/GlobalMaxService/?route=service_createuser&rol=1&cedula=112321321&user=juandavid&pass=twixtwix
-service_createuser:
+#Example     : http://127.0.0.1/services/?BC=globalmx_cr3ateuser&rol=1&cedula=112321321&user=juandavid&pass=twixtwix
+globalmx_cr3ateuser:
 	method: get
 	app: controller
 	module: ControllerUsuario
 	action: createUser
-
-service_getmenu:
+#Descripcion : Permite crear el menu de AppGlobalMax
+#Parametro   : rol    int()
+#              cedula int()
+#              user   String
+#              contrasena String
+#Salida      : Retorna mensaje de Exito o Error segun caso cumplido.
+#Example     : http://127.0.0.1/services/?BC=globalmx_menu&documento=13
+globalmx_menu:
 	method: get
 	app: controller
 	module: ControllerMenu
 	action: getMenu
+#Descripcion : Permite consultar tarjetas por numero o por estados
+#Parametro   : numTarjeta (int)
+#              estado (int)
+#Salida      : Si no ingresa numTarjeta ni estado : Lista todas las tarjetas
+#              Si no ingresa numTarjeta y estado : Lista todas las tarjetas segun el estado
+#              Si ingresa numTarjeta : Muestra la tarjeta con el numero si existe.
+#Example     : http://127.0.0.1/services/?BC=globalmx_gettarjeta&nit=805009514&trama=503
+globalmx_gettarjeta:
+	method: get
+	app: controller
+	module: ControllerTarjeta
+	action: consultaTarjeta
+#Descripcion : Servicio core que permite realizar transacciones.
+#Parametro   : tarjeta (int)
+#              nit     (int)
+#              trama   (String)
+#              valor   (int)
+#              punto   (int)
+#Salida      : Si se realiza una recarga retorna : Transaccion Exitosa.
+#			   Si se realiza una compra retorna : Compra Exitosa.
+#              Si no se puede realizar la transaccion retorna : Error en la transaccion.
+#Example     : http://127.0.0.1/services/?BC=globalmxt1&tarjeta=1886934616766149&valor=999999&nit=805009514&punto=23&trama=503
+globalmxt1:
+	method: get
+	app: controller
+	module: ControllerTarjeta
+	action: managerTransation
+#Descripcion : Servicio core que permite consulta el tipo de transaccion
+#Parametro   : tarjeta (int)
+#              nit     (int)
+#              trama   (String)
+#Salida      : Valida si la tarjeta ya fue comprada y esta lista para transaccion retorna : 2
+#              Valida si la tarjeta no a sido comprada para realizar la compra retorna : 1
+#Example     : http://127.0.0.1/services/?BC=globalmxt2&tarjeta=1886934616766149&nit=805009514&trama=503
+globalmxt2:
+	method: get
+	app: controller
+	module: ControllerTarjeta
+	action: tipoTransation
